# serializer version: 1
# name: test_sensors[sensor.muli_bike_assistance_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Muli Bike Assistance level',
      'icon': 'mdi:electric-switch',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_assistance_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_sensors[sensor.muli_bike_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Muli Bike Battery',
      'last_update_time': '2024-01-15T10:30:00Z',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '85',
  })
# ---
# name: test_sensors[sensor.muli_bike_battery_cycles-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Muli Bike Battery cycles',
      'icon': 'mdi:battery-sync',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_battery_cycles',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '42',
  })
# ---
# name: test_sensors[sensor.muli_bike_firmware_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Muli Bike Firmware version',
      'icon': 'mdi:chip',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_firmware_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.2.3',
  })
# ---
# name: test_sensors[sensor.muli_bike_gps_tracker_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Muli Bike GPS tracker battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_gps_tracker_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '95',
  })
# ---
# name: test_sensors[sensor.muli_bike_hardware_version-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Muli Bike Hardware version',
      'icon': 'mdi:memory',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_hardware_version',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'HW-2.0',
  })
# ---
# name: test_sensors[sensor.muli_bike_remaining_distance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'Muli Bike Remaining distance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_remaining_distance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45',
  })
# ---
# name: test_sensors[sensor.muli_bike_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'speed',
      'friendly_name': 'Muli Bike Speed',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_sensors[sensor.muli_bike_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Muli Bike Status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'RUNNING',
  })
# ---
# name: test_sensors[sensor.muli_bike_total_mileage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'Muli Bike Total mileage',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.muli_bike_total_mileage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1234',
  })
# ---
